# nn-phishing-detection

./: .gitignore  .ruff.toml  README.md  download_glove.sh  finetune_distilbert.sh  pyproject.toml  run_zero_shot.sh  train_optimal.sh
src/nn_phishing_detection/: __init__.py  data_utils.py  evaluate_base_distilbert.py  evaluate_model.py  metrics.py  tracking.py
src/nn_phishing_detection/analysis/: __init__.py  error_analysis.py
src/nn_phishing_detection/hyperparameters/: __init__.py  optuna_word.py
src/nn_phishing_detection/models/: __init__.py  word_cnn_bigru.py
src/nn_phishing_detection/tools/: __init__.py  data_stats.py  similarity.py
src/nn_phishing_detection/training/: __init__.py  train_distilbert.py  train_word_bigru.py
src/nn_phishing_detection/vocab/: __init__.py  word_vocab.py
src/nn_phishing_detection/zero_shot/: __init__.py  zs_classifier.py
